--- a/README
+++ b/README
@@ -23,8 +23,8 @@ Ryu:
         It uses ryu/topo.py to learn network topology and update flow info.
     4. ryu/test.py
         For ryu/topo.py testing.
-        1. Shows how to use Topo to generate/read CPLEX input/result.
-        2. Shows how to update flow info with ryu/flow.json or CPLEX result.
+        i) Shows how to use Topo to generate/read CPLEX input/result.
+        ii) Shows how to update flow info with ryu/flow.json or CPLEX result.
     5. ryu/cplex.[in|out]
         Samples for CPLEX.
 
